--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <a href="/play">Home</a>
   <a href="/test">Test</a>
   </div>
-  <script src = 'base.js'></script>
+  <script src = 'https://egoryrhenko.github.io/test/test.js'></script>
   <script src = 'panel.js'></script>
 
   </body>
